tidy up code base