@@ -722,6 +722,12 @@ sourceSets {
     }
 }
 
+task highLevelDataSetup(type: JavaExec) {
+    main = "uk.gov.hmcts.ccd.datastore.befta.TestDataLoaderMain"
+    classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 task smoke() {
     description = 'Executes smoke tests against an the CCD Data Store API instance just deployed'
     dependsOn aatClasses
